photoprism/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
spec:
  selector:
    app: photoprism
  ports:
    - name: http
      port: 80
      targetPort: 2342
